# CatchingBlimp

./: .gitignore  .gitmodules  InstallOpenCV4.sh  InstallOpenCV4_Ubuntu22.sh  InstallROS2.sh  README.md
.github/workflows/: actions.yml  doc_gen.py  doc_gen.yml  manual_milestones.yml  update-submodules.yml  update_submodules.yaml
.metadata/: version.ini
ML_Pipelines/: README.md
ML_Pipelines/Completed/: README.md
ML_Pipelines/ML_Pipeline/: README.md
ML_Pipelines/ML_Pipeline/6.Run_This_Shell_Script/Computation/Yolov5_DeepSort_Pytorch/yolo_ros/track_ros2/: package.xml
ML_Pipelines/ML_Pipeline/6.Run_This_Shell_Script/Computation/Yolov5_DeepSort_Pytorch/yolo_ros/track_ros2/track_ros2/: yoloAndDeepSort_ros2.py
Spring 2023/BlimpV6_0/: BlimpV6_0.ino  EMAFilter.h  IMU_Control.cpp  IMU_Control.h  MotorControl.cpp  MotorControl.h  tripleBallGrabber.cpp
Spring 2023/BlimpV6_1/: BerryIMU_v3.cpp  BlimpV6_1.ino  EMAFilter.cpp  SerialData.cpp  SerialData.h  baro_acc_kf.cpp  baro_acc_kf.h  compVEst.cpp  compVEst.h
Spring 2023/BlimpV6_2/: platformio.ini
Spring 2023/BlimpV7_1/: platformio.ini
Spring 2023/Madgwick_Filter_Library_Final/: BerryIMU_v3.cpp  Madgwick_Filter_Library_Final.ino
Spring 2023/OpticalVelocityEstimation/: BerryIMU_v3.cpp  IMU_Inertial_Corr_Library.cpp  IMU_Inertial_Corr_Library.h  Kalman_Filter_Tran_Vel_Est.cpp  OpticalVelocityEstimation.ino  Optical_Flow.cpp
Spring 2023/Optical_Flow_Library/: Optical_Flow.cpp  Optical_Flow.h  Optical_Flow_Library.ino
Spring 2023/TeensyCodeTemplate/: TeensyCodeTemplate.ino
Spring 2023/ThrustTest/: MotorControl.cpp  MotorControl.h  ThrustTest.ino
Spring2024/Pi_Servo_Control/: main.c
Summer 2024/Pi_Servo_Control/: main.c
Summer2023/: README.md  README.txt
Summer2023/BlimpMV4/: README.md  platformio.ini
Summer2023/ROS_tf2_test/: README.md
Summer2023/ros2_camera_calibration/: README.md
Summer2023/ros2_stereo/: README.md  gstreamerNode.sh  gstreamerNode_BurnCreamBlimp.sh  gstreamerNode_FiveGuysBlimp.sh  gstreamerNode_GameChamerBlimp.sh  gstreamerNode_SillyAhBlimp.sh  gstreamerNode_SuperBeefBlimp.sh  gstreamerNode_TurboBlimp.sh
Summer2023/ros2_stereo/src/opencv_telemetry/: CMakeLists.txt  package.xml
Summer2023/ros2_stereo/src/opencv_telemetry/calibration/: calibrated_cams.txt  camera2_elp_left.yaml  camera3_elp_left.yaml  camera3_elp_right.yaml  camera4_elp_right.yaml  camera5_elp_left.yaml  camera5_elp_right.yaml  elp_right.yaml
Summer2023/ros2_stereo/src/opencv_telemetry/calibration/calibration_data_test_flight/calibrationdata/: left.yaml  ost.txt  right.yaml
Summer2023/ros2_stereo/src/opencv_telemetry/include/opencv_telemetry/: resized_subscriber.hpp
Summer2023/ros2_stereo/src/opencv_telemetry/src/: minimal_opencv_ros2_node.cpp  split_sync_images.cpp
Summer2023/ros2_stereo_launch_bash_scripts/: ros2_stereo_launch.sh
Summer2023/test_urdf_tool_ws/: README.md  README.txt
Summer2024/BlimpV8_OrangePi/: allFlashTeensys.sh
Summer2024/Brushless_Functions/: main.cpp
Summer2024/Pi_Motor_Control_Testing/: copyCodeToPi.sh  main.c  makefile
Summer2024/Pi_Servo_Control/: main.c
Summer2024/Servo_Functions/: servo.h
Summer2024/Test_Bench_Sequence/: main.cpp  servo.cpp
Summer2024/imu_testing/: main.c
Summer2024/ros2_ws/: copyCodeToPi.sh
Summer2024/ros2_ws/src/ros2_blimp/: CMakeLists.txt  package.xml
Summer2024/ros2_ws/src/ros2_blimp/src/: BM388.h  BangBang.cpp  Gimbal.cpp  MotorControl.cpp  PID.cpp  PID.h  accelGCorrection.h  baro_acc_kf.cpp  blimp.cpp  blimp.h  brushless.cpp  brushless.h  copyCodeToPi.sh  optical_ekf.cpp  tripleBallGrabber.cpp
Summer2024/ros2_ws/src/ros2_blimp/src/install/: local_setup.sh  setup.sh
Summer2024/ros2_ws/src/ros2_blimp/src/log/: latest_build
blimp-workspace/pi-opencv-test/: .cproject  .project  copyCodeToPi.sh
blimp-workspace/pi-opencv-test/src/: CMakeLists.txt  Makefile  pi-opencv-test.cpp
blimp-workspace/piOffboardStereoVision/: .cproject  copyCodeToPi.sh
blimp-workspace/udp_client/: .cproject  copyCodeToPi.sh
blimpVision/: copyCodeToPi.sh  copyTestCodeToPi.sh  copyTestCompileToPi.sh  copyVideoToComp.sh  doc.txt  restartProgram.sh  stereo_rectify_maps.xml
blimpVision/CameraTuning/: compile.sh
blimpVision/StreamingTest/: .cproject
blimpVision/StreamingTest/src/: CMakeLists.txt  ComputerVision.h  ComputerVisionOld.h
blimpVision/Videos/: outputVideo.avi
blimpVision/piTestCompile/piTestCompileSrc/: CMakeLists.txt  ComputerVision.h  piTest.cpp
configuration/blimpVision/piBlimpVisionTemp/: CMakeLists.txt  piBlimpVision.cpp
configuration/blimpVision/piStereoVisionOld/piStereoVisionSrc/: CMakeLists.txt  piStereoVision.cpp
deprecated/Summer2023/ROS_tf2_test/src/blimp_telemetry/: CMakeLists.txt  package.xml
deprecated/Summer2023/ros2_stereo/src/stereo_combined/: CMakeLists.txt  package.xml
deprecated/Summer2023/ros2_stereo/src/stereo_combined/include/: StereoCombined.hpp
deprecated/Summer2023/ros2_stereo/src/stereo_combined/launch/: blimp_vision.launch.xml  combined_node.launch.py  gscam_test.launch.xml  vision_test.launch.xml
deprecated/Summer2023/ros2_stereo/src/stereo_combined/src/: edge_aware.cpp
deprecated/Summer2024/ros2_ws/src/cpp_pubsub/: CMakeLists.txt
deprecated/Summer2024/ros2_ws/src/cpp_pubsub/src/: subscriber_member_function.cpp
deprecated/Summer2024/ros2_ws/src/ros2_blimp/: CMakeLists.txt  copyCodeToPi.sh
deprecated/Summer2024/ros2_ws/src/ros2_blimp/src/: Gimbal.h  Madgwick_Filter.h  Optical_Flow.cpp  Optical_Flow.h  PID.cpp  ServoWrapper.h  baro_acc_kf.h  servo.h
deprecated/blimp-workspace/piOffboardStereoVision/src/: CMakeLists.txt
deprecated/blimpVision/takeImagesCalibrate/: CMakeLists.txt  takeImagesCalibrate.cpp
docs/: index.html
md_files/: README.md
scripts/: blimp_1_vision.sh  blimp_2_vision.sh  blimp_3_vision.sh  blimp_4_vision.sh  blimp_5_vision.sh  blimp_6_vision.sh  pi_vision_start.sh  stream_receiver.sh  stream_sender.sh  vision_calib.sh
udev/: 99-elp-stereo-sync-camera.rules  create_udev_rules.sh
videoStreamer/: server.py  yoloClient.cpp  yoloClient.py  yoloServer.py
(+1315 files in other folders)
